<resources>
    <string name="app_name">SHC</string>
    <string name="add_your_symptoms">Add your Symptoms</string>
    <string name="add_as_many_symptoms_as_you_can_for_the_most_accurate_results">Add as many symptoms as you can for the most accurate results.</string>
    <string name="enter_your_symptom">Enter Your Symptom</string>
    <string name="app_full_name">Smart Health Consultation</string>
    <string name="add_symptom">Add Symptom</string>
    <string name="submit">Submit</string>
    <string name="evaluate_symptoms">Evaluate Symptoms</string>
    <string name="textview">TextView</string>
    <string name="disease_prediction_failure_no_match">SHC failed to find your disease, You need a Human?</string>
    <string name="no_match">No Match</string>
    <string name="symptom">Symptom : </string>
    <string name="caution">Caution!</string>
    <string name="delete_confirmation">\" will be delete. Are you sure?</string>
    <string name="deleted">\" deleted</string>
    <string name="proceed">Yes, Proceed Please…</string>
    <string name="try_again">No, Try again please…</string>
    <string name="more_symptoms">You need to add More Symptoms, Ready to goto Add Symptoms Page?</string>
    <string name="more_symptoms_title">More Symptoms</string>
    <string name="no_thanks">No, Thanks…</string>
    <string name="server_ip_address">Server Address</string>
    <string name="serverAddress">http://192.168.225.212:5000</string>
    <string name="serverConfiguration">Server Configuration</string>
    <string name="title_activity_doctor">DoctorActivity</string>
    <string name="doctors">Available Doctors</string>
    <string name="disease">Disease</string>
    <string name="diseaseWithFullColumn">Disease : </string>
    <string name="doctor_avatar">Doctor Avatar</string>
    <string name="at_working_clinic">At Working Clinic</string>
    <string name="on_12_am_to_5_pm">On 12 AM to 5 PM</string>
    <string name="rs_500">Rs. 500</string>
    <string name="_11_am_to_5_pm">11 AM to 5 PM</string>
    <string name="doctorWithFullColumn">Doctor :</string>
    <string name="you_are_selected_5am_to_6am">You are selected 5am to 6am</string>
    <string name="back_to_doctors">Back to Doctors</string>
    <string name="back_to_slots">Back to Slots</string>
    <string name="payment">Payment Please…</string>
    <string name="results">Results</string>
    <string name="slots">Available Slots</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
