<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="5dp"
    android:orientation="horizontal"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/textViewSlot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#212121"
            android:textSize="14sp"
            tools:text="@string/_11_am_to_5_pm" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text=""
            android:textColor="#727272"
            android:textSize="14sp"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#727272"
            android:textSize="14sp"
            tools:text="@string/serverAddress" />

        <TextView
            android:id="@+id/textViewContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#727272"
            android:textSize="14sp"
            tools:text="@string/serverConfiguration" />

        <TextView
            android:id="@+id/textViewDisease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#727272"
            android:textSize="14sp"
            tools:text="@string/disease" />

    </LinearLayout>
</androidx.cardview.widget.CardView>


